# docusage

./: .env.example  .gitignore  LICENSE  Makefile  README.md  app.py  docusage_colab.ipynb  pyproject.toml  requirements.txt
audit/: __init__.py  auditor.py  models.py
config/: __init__.py  logger.py  settings.py
corpus/: __init__.py  chunker.py  downloader.py  metadata_tagger.py  models.py  registry.py  sources.py
generation/: __init__.py  citation_formatter.py  generator.py  models.py  prompt_builder.py  reranker.py
indexing/: __init__.py  bm25_indexer.py  faiss_indexer.py  index_builder.py
pipeline/: __init__.py  models.py  rag_pipeline.py
query/: __init__.py  decomposer.py  router.py
retrieval/: __init__.py  bm25_retriever.py  dense_retriever.py  hybrid_retriever.py  models.py  rrf_fusion.py
scripts/: build_index.py  download_corpus.py
tests/: conftest.py  test_audit.py  test_chunker.py  test_e2e.py  test_generation.py  test_indexing.py  test_pipeline.py  test_query.py  test_retrieval.py
